# sparkle

./: .gitmodules  AUTHORS  CONTRIBUTING.md  README.md
deploy/: README.md  maven-install-spark-core-1.2.0.sh  maven-install-spark-core-2.0.0.sh  multi-copy.sh
deploy/dependent-modules/: README.md  README.txt  install-boost.sh  install-pre-reqs.sh  prereqs-install.yml  spark-inventory.yml  spark-vars.yml
deploy/dependent-modules/inventory/: sparkle-inventory.yml
deploy/dependent-modules/scripts/: fix_tcmalloc_symlink_debian.sh  fix_tcmalloc_symlink_rhel.sh
deploy/dependent-modules/tasks/: prereqs-install-debian.yml  prereqs-install-rhel.yml
deploy/dependent-modules/vars/: sparkle-vars-debian.yml  sparkle-vars-rhel.yml
deploy/examples/: spark-defaults.conf  spark-env.sh
deploy/virtualnode/playbooks/: alps-config.yml  ansible-test.yml  install-spark.sh  inventory.yml  multi-core.yml  pre-reqs-apt.yml  pre-reqs-yum.yml  root-dir.yml  run.sh  setup-alps.sh  unpack_node.yml  unpack_worker.yml  variables.yml
deploy/virtualnode/scripts/: workers-per-socket.pl
deploy/virtualnode/templates/examples/: test-pi.sh
deploy/virtualnode/templates/scripts/: clean-up.sh  create_filesystems.sh  delete_filesystems.sh  killJava.sh  start-one.sh  start-spark.sh  start-two.sh
deploy/virtualnode/templates/spark/: spark-defaults.conf  spark-env.sh
firesteel/: CMakeLists.txt  build-cpp.sh  pom.xml
firesteel/cmake/: Findalps.cmake  Findgtest.cmake  Findjni.cmake  Findtbb.cmake
firesteel/src/main/cpp/: CMakeLists.txt
firesteel/src/main/cpp/jnioffheapstore/: CMakeLists.txt  Makefile  OffHeapStoreInf.cc  com_hp_hpl_firesteel_offheapstore_OffHeapStore.h
firesteel/src/main/cpp/offheapstore/: AttributeHashTable.h  CMakeLists.txt  Makefile  OffHeapStoreManager.cc  OffHeapStoreManager.h  ShmAddress.h
firesteel/src/main/cpp/shmmanagement/: CMakeLists.txt  SharedMemoryAllocator.h  SharedMemoryManager.cc  SharedMemoryManager.h
firesteel/src/main/cpp/shuffle/: CMakeLists.txt  EnumKvTypes.h  GenericMapShuffleStore.h  GenericReduceChannel.cc  GenericReduceChannel.h  GenericReduceShuffleStore.h  HashMapReduceChannelWithIntKeys.cc  KVPair.h  KVPairLoader.h  KVPairLoaderImpl.cc  MapShuffleStoreManager.cc  MapShuffleStoreManager.h  MapShuffleStoreWithIntKeys.cc  MapShuffleStoreWithIntKeys.h  MapShuffleStoreWithObjKeys.cc  MapShuffleStoreWithObjKeys.h  MapStatus.h  MergeSortChannelHelper.cc  MergeSortReduceChannelWithIntKeys.cc  MergeSortReduceChannelWithIntKeys.h  PassThroughKeyValueTrackerWithIntKeys.h  PassThroughReduceChannelWithIntKeys.cc  PassThroughReduceChannelWithIntKeys.h  PriorityQueueVariableLengthKeyComparator.h  ReduceShuffleStoreLike.cc  ReduceShuffleStoreLike.h  ReduceShuffleStoreManager.cc  ReduceShuffleStoreManager.h  ReduceShuffleStoreWithIntKeys.cc  ReduceShuffleStoreWithIntKeys.h  ReduceShuffleStoreWithObjKeys.cc  ReduceShuffleStoreWithObjKeys.h  ShuffleDataSharedMemoryManager.h  ShuffleStoreManager.cc  SimpleUtils.h  VariableLengthKeyComparator.h
firesteel/src/main/cpp/shuffle/barrext/: HashMapReduceChannelWithByteArrayKeys.cc  HashMapReduceChannelWithByteArrayKeys.h  MapShuffleStoreWithByteArrayKeys.cc  MapShuffleStoreWithByteArrayKeys.h  MergeSortKeyPositionTrackerWithByteArrayKeys.h  MergeSortReduceChannelWithByteArrayKeys.cc  MergeSortReduceChannelWithByteArrayKeys.h  PassThroughKeyValueTrackerWithByteArrayKeys.h  PassThroughReduceChannelWithByteArrayKeys.cc  PassThroughReduceChannelWithByteArrayKeys.h  ReduceShuffleStoreWithByteArrayKeys.cc  ReduceShuffleStoreWithByteArrayKeys.h
firesteel/src/main/cpp/shuffle/longext/: HashMapReduceChannelWithLongKeys.cc  MapShuffleStoreWithLongKeys.cc  MergeSortReduceChannelWithLongKeys.cc  MergeSortReduceChannelWithLongKeys.h  ReduceShuffleStoreWithLongKeys.cc  ReduceShuffleStoreWithLongKeys.h
firesteel/src/main/cpp/shuffle/strext/: MergeSortReduceChannelWithStringKeys.cc  MergeSortReduceChannelWithStringKeys.h  ReduceShuffleStoreWithStringKeys.h
firesteel/src/test/cpp/: CMakeLists.txt
firesteel/src/test/cpp/shuffle/: CMakeLists.txt  README  bytebufferpool_unitest.cc  extensiblebytebuffers_unittest.cc  load_ldpath.sh  mapshufflestoremanager_unittest.cc  mergesortchannelwithintkeys_unittest.cc  multipartitionedheap_unititest.cc  shufflestoremanager_unittest.cc  shufflestorewithintkeys_unittest.cc
firesteel/src/test/resources/: log4j.properties
tests/multinodes/BeliefPropagation/: README.md  runOffHeapStoreBP.sh
tests/multinodes/BeliefPropagation/edgepartition-2.0.0/: build-cpp-withmake.sh  pom.xml
tests/multinodes/BeliefPropagation/offheapstore-bp/: pom.xml
tests/multinodes/GroupBy/: README.md  groupby.sbt  launch-groupbyperflong.sh
tests/multinodes/Join/: README.md  join.sbt  launch-joinperflong.sh
tests/multinodes/PageRank/: README.md  pagerank.sbt  soc-launch.sh
tests/multinodes/PartitionBy/: README.md  launch-partitionbyperf.sh  launch-partitionbyperflong.sh  partitionby.sbt
tests/multinodes/ReduceBy/: README.md  launch-reducebyperflong.sh  reduceby.sbt
tests/multinodes/SortBy/: README.md  launch-sortbyperflong.sh  sortby.sbt
tests/multinodes/TeraSort/: README.md  teragen-launch.sh  terasort-launch.sh  teravalidate-launch.sh
tests/multinodes/TeraSort/spark-terasort/: README.md  pom.xml
tests/units/javashmshuffle/runtest/: README.md  runAllTests.sh  runHashBasedMapShuffleStoreWithIntKeysTest.sh  runHashBasedMapShuffleStoreWithLongKeysTest.sh  runHashBasedReduceShuffleStoreWithIntKeysTest.sh  runHashBasedReduceShuffleStoreWithLongKeysTest.sh  runKryoSerializerTest.sh  runPassThroughReduceShuffleStoreWithIntKeysTest.sh  runPassThroughReduceShuffleStoreWithLongKeysTest.sh  runShmStoreManagerTest.sh  runSortBasedMapShuffleStoreWithByteArrayKeysTest.sh  runSortBasedMapShuffleStoreWithIntKeysTest.sh  runSortBasedReduceShuffleStoreWithByteArrayKeysTest.sh  runSortBasedReduceShuffleStoreWithIntKeysTest.sh  runStoreTrackerTest.sh
tests/units/scalashmshuffle/runtest/: README.md  runShuffleManagerTest.sh  runTestMultiThreadedShmShuffleOperations1.sh  runTestMultiThreadedShmShuffleOperations2.sh  (+3 more)
(+121 files in other folders)
